[12.0][FIX] pronto: exije el país si es cliente y, si es argentina también la localización

--- a/pronto/views/res_partner_views.xml
+++ b/pronto/views/res_partner_views.xml
@@ -38,6 +38,10 @@
                 <attribute name="attrs">{'required': [('customer','=',True),('country_id','=',10)]}</attribute>
             </field>
 
+            <field name="country_id" position="attributes">
+                <attribute name="attrs">{'required': [('customer','=',True)]}</attribute>
+            </field>
+
         </field>
     </record>
 
