--- a/box/views/box_session_journal_views.xml
+++ b/box/views/box_session_journal_views.xml
@@ -14,6 +14,7 @@
                     <group>                    
                         <field name="balance_start"/>
                         <field name="balance_end"/>
+                        <field name="difference"/>
                     </group>
                 </group>
                 <notebook>
