--- a/box/wizard/box_session_cash.xml
+++ b/box/wizard/box_session_cash.xml
@@ -10,6 +10,9 @@
                     <group>
                         <field name="description" />
                         <field name="reason_id" />
+                        <field name="box_session_id" invisible="True" />
+                        <field name="session_journal_ids" invisible="True" />
+                        <field name="journal_id" required="1" />
                     </group>
                     <group> <field name="amount" /> </group>
                     <!-- <group> <field name="box_session_id" invisible="True"/> </group> -->                    
@@ -32,6 +35,9 @@
                     <group> 
                         <field name="description" />
                         <field name="reason_id" />
+                        <field name="box_session_id" invisible="True" />
+                        <field name="session_journal_ids" invisible="True" />
+                        <field name="journal_id" required="1" />                        
                     </group>
                     <group> <field name="amount" /> </group>
                     <!-- <group> <field name="box_session_id" invisible="True"/> </group> -->                    
@@ -52,7 +58,12 @@
             <form>
                 <group>
                     <!-- <group> <field name="description" /> </group> -->
-                    <group> <field name="amount" /> </group>
+                    <group>
+                        <field name="amount" /> 
+                        <field name="box_session_id" invisible="True" />
+                        <field name="session_journal_ids" invisible="True" />
+                        <field name="journal_id" required="1" />                     
+                    </group>
                     <!-- <group> <field name="box_session_id" invisible="True"/> </group> -->                    
                 </group>
                 <footer>
@@ -71,7 +82,12 @@
             <form>
                 <group>
                     <!-- <group> <field name="description" /> </group> -->
-                    <group> <field name="amount" /> </group>
+                    <group>
+                        <field name="amount" /> 
+                        <field name="box_session_id" invisible="True" />
+                        <field name="session_journal_ids" invisible="True" />
+                        <field name="journal_id" required="1" />                    
+                    </group>
                     <!-- <group> <field name="box_session_id" invisible="True"/> </group> -->                    
                 </group>
                 <footer>
