--- a/box/views/box_session_views.xml
+++ b/box/views/box_session_views.xml
@@ -82,9 +82,10 @@
                     <group>
                         <field name="cash_control" invisible="1" />
                         <group>
-                            <field name="user_id"/>                            
+                            <field name="user_id" readonly="1"/>                            
                             <field name="box_id" readonly="1"/>
                             <field name="usuario_actual_responsable" invisible='1' />
+                            <field name="arqueo_inicial_realizado" attrs="{'invisible' : [('state', '!=', 'opening_control')]}"/>
                         </group>
                         <group>
                             <field name="start_at" attrs="{'invisible' : [('state', '=', 'opening_control')]}"/>
@@ -98,11 +99,11 @@
                         <tree string="Medios de pago" create="false" delete="false" edit="true" editable="bottom">
                             <!-- <field name="name" /> -->                            
                             <field name="journal_id" readonly="True"/>
-                            <field name="balance_start" attrs="{'readonly': [('parent.state', '=', 'closing_control')]}"/>
-                            <field name="total_entry_encoding" attrs="{'column_invisible': [('parent.state', '=', 'opening_control')]}" readonly="True"/>                                                                    
-                            <field name="balance_end" attrs="{'column_invisible': [('parent.state', '=', 'opening_control')]}" readonly="True" />                            
-                            <field name="balance_end_real" attrs="{'column_invisible': [('parent.state', '=', 'opening_control')]}"/>
-                            <field name="difference" attrs="{'column_invisible': [('parent.state', '=', 'opening_control')]}" readonly="True"/>
+                            <field name="balance_start" attrs="{'readonly': [('parent.state', '=', 'closing_control')],'column_invisible': [('parent.state', '=', 'closing_control')]}"/>
+                            <!-- <field name="total_entry_encoding" attrs="{'column_invisible': [('parent.state', '=', 'opening_control')]}" readonly="True"/>                                                                     -->
+                            <!-- <field name="balance_end" attrs="{'column_invisible': [('parent.state', '=', 'opening_control')]}" readonly="True" />                             -->
+                            <field string="Saldo final REAL" name="balance_end_real" attrs="{'column_invisible': [('parent.state', '=', 'opening_control')]}"/>
+                            <!-- <field name="difference" attrs="{'column_invisible': [('parent.state', '=', 'opening_control')]}" readonly="True"/> -->
                             <field name="currency_id" groups="base.group_multi_currency" readonly="True"/>
                             <!-- <field name="state" /> -->
                         </tree>
