--- a/box/views/box_session_views.xml
+++ b/box/views/box_session_views.xml
@@ -100,6 +100,7 @@
                             <!-- <field name="name" /> -->                            
                             <field name="journal_id" readonly="True"/>
                             <field name="balance_start" attrs="{'readonly': [('parent.state', '=', 'closing_control')],'column_invisible': [('parent.state', '=', 'closing_control')]}"/>
+                            <field name="balance_end_last_session" readonly="True" attrs="{'column_invisible': [('parent.state', '=', 'closing_control')]}"/>
                             <!-- <field name="total_entry_encoding" attrs="{'column_invisible': [('parent.state', '=', 'opening_control')]}" readonly="True"/>                                                                     -->
                             <!-- <field name="balance_end" attrs="{'column_invisible': [('parent.state', '=', 'opening_control')]}" readonly="True" />                             -->
                             <field string="Saldo final REAL" name="balance_end_real" attrs="{'column_invisible': [('parent.state', '=', 'opening_control')]}"/>
