[12.0][IMP] t717 box: informar motivo de cancelación de recibo/OP

--- a/box/views/account_payment_group_views.xml
+++ b/box/views/account_payment_group_views.xml
@@ -27,7 +27,11 @@
                     </tree>
                 </field>
             </field>
-            
+
+            <xpath expr="//button[@name='cancel']" position="replace">
+                <button name="cancel_payment" attrs="{'invisible': [('state', '=', 'cancel')]}" string="Cancelar" type="object"/>
+            </xpath>
+
         </field>
     </record>
 
