--- a/box/views/account_payment_group_views.xml
+++ b/box/views/account_payment_group_views.xml
@@ -32,6 +32,11 @@
                 <button name="cancel_payment" attrs="{'invisible': [('state', '=', 'cancel')]}" string="Cancelar" type="object"/>
             </xpath>
 
+            <xpath expr="//sheet" position="after">
+                <div class="oe_chatter">
+                    <field name="activity_ids" widget="mail_activity"/>
+                </div>
+            </xpath>
         </field>
     </record>
 
