--- a/pronto/wizards/stock_return_picking_views.xml
+++ b/pronto/wizards/stock_return_picking_views.xml
@@ -5,7 +5,7 @@
         <field name="inherit_id" ref="stock.view_stock_return_picking_form"/>
         <field name="arch" type="xml">
             <field name="location_id" position="after">
-                <field name="reason_id" options="{'no_create': True, 'no_open': False}"/>
+                <field name="reason_id" options="{'no_create': True, 'no_open': False}" required="1"/>
                 <field name="wait_replacement" string="Devolución con reemplazo" attrs="{'invisible':[('in_out','=','outgoing')]}"/>
                 <field name="in_out" invisible="1"/>                
             </field>
